Fixed footer position on Mobile

--- a/style.css
+++ b/style.css
@@ -80,8 +80,6 @@ ul li:hover {
 /*Footer Settings*/
 .copyright {
     text-align: center;
-    display: block;
-    margin: 0 auto; 
 }
 .footer-bar{
     display: flex;
@@ -96,6 +94,10 @@ ul li:hover {
 .socials-icon-group img {
     width: 50px;
 }
+.socials-icon-group {
+    text-align: center;
+}
+
 
 
 /*Generic Templates*/
@@ -108,7 +110,7 @@ ul li:hover {
     padding-right: 20px;
     margin: 0 auto;
     margin-top: 10px;
-    margin-bottom: 5%;
+    margin-bottom: 2%;
 }
 .container-intro {
     display: flex;
